@@ -1,3 +1,8 @@
+2005-12-07  Martin Hunt  <hunt@redhat.com>
+
+	* alloc.c: Remove all unused functions.
+	* io.c: Add vprintf() prototype.
+
 2005-11-29  Martin Hunt  <hunt@redhat.com>
 
 	* recreate_links: Remove links to deleted files.
